--- a/test/Sequence.Api.Test/Sequence.Api.Test.csproj
+++ b/test/Sequence.Api.Test/Sequence.Api.Test.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Sequence.Api\Sequence.Api.csproj" />
+    <ProjectReference Include="..\..\src\Sequence.Sqlite\Sequence.Sqlite.csproj" />
   </ItemGroup>
 
 </Project>
