--- a/src/Sequence.Api/wwwroot/public/manifest.json
+++ b/src/Sequence.Api/wwwroot/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Sequence",
+  "name": "Sequence",
   "icons": [
     {
       "src": "favicon.ico",
