Use immutable web app strategy

--- a/src/Sequence.Api/wwwroot/package.json
+++ b/src/Sequence.Api/wwwroot/package.json
@@ -1,13 +1,12 @@
 {
   "name": "sequence",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.0"
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,5 +22,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "ejs": "^2.6.1",
+    "react-scripts": "^2.1.1"
+  }
 }
