--- a/src/Sequence.Api/wwwroot/public/manifest.json
+++ b/src/Sequence.Api/wwwroot/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://www.jbfp.dk",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
