--- a/src/Sequence.Api/appsettings.Development.json
+++ b/src/Sequence.Api/appsettings.Development.json
@@ -2,6 +2,9 @@
     "MongoDb": {
         "ConnectionString": "mongodb://localhost/sequence"
     },
+    "Postgres": {
+        "ConnectionString": "Server=localhost; Port=5432; User ID=postgres; Password=password; Database=sequence;"
+    },
     "Sqlite": {
         "ConnectionString": "Data Source=sequence.db; Cache=Shared;"
     },
