Add default postgresql production connection string

--- a/src/Sequence.Api/appsettings.json
+++ b/src/Sequence.Api/appsettings.json
@@ -2,6 +2,9 @@
     "MongoDb": {
         "ConnectionString": "mongodb://localhost/sequence"
     },
+    "Postgres": {
+        "ConnectionString": "Host=/var/run/postgresql; Port=5432; Database=sequence;"
+    },
     "Sqlite": {
         "ConnectionString": "Data Source=sequence.db; Cache=Shared;"
     },
