Move Postgres projects into postgres folder

--- a/postgres/Sequence.Postgres.Test/Sequence.Postgres.Test.csproj
+++ b/postgres/Sequence.Postgres.Test/Sequence.Postgres.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Sequence.Postgres\Sequence.Postgres.csproj" />
+    <ProjectReference Include="..\Sequence.Postgres\Sequence.Postgres.csproj" />
   </ItemGroup>
 
 </Project>
