--- a/postgres/Sequence.Postgres/Sequence.Postgres.csproj
+++ b/postgres/Sequence.Postgres/Sequence.Postgres.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sequence.Core\Sequence.Core.csproj" />
+    <ProjectReference Include="..\..\src\Sequence.Core\Sequence.Core.csproj" />
   </ItemGroup>
 
    <ItemGroup>
