Move API projects into api folder

--- a/api/Sequence.Api.Test/Sequence.Api.Test.csproj
+++ b/api/Sequence.Api.Test/Sequence.Api.Test.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Sequence.Api\Sequence.Api.csproj" />
+    <ProjectReference Include="..\Sequence.Api\Sequence.Api.csproj" />
   </ItemGroup>
 
 </Project>
