Implement IBotTaskObservable in Postgres project

--- a/api/Sequence.Api/appsettings.json
+++ b/api/Sequence.Api/appsettings.json
@@ -3,7 +3,7 @@
         "ConnectionString": "mongodb://localhost/sequence"
     },
     "Postgres": {
-        "ConnectionString": "Host=/var/run/postgresql; Port=5432; Database=sequence;"
+        "ConnectionString": "Host=/var/run/postgresql; Port=5432; Database=sequence; Tcp Keepalive=true;"
     },
     "Sqlite": {
         "ConnectionString": "Data Source=sequence.db; Cache=Shared;"
