--- a/api/Sequence.Api/appsettings.Development.json
+++ b/api/Sequence.Api/appsettings.Development.json
@@ -3,7 +3,7 @@
         "ConnectionString": "mongodb://localhost/sequence"
     },
     "Postgres": {
-        "ConnectionString": "Server=localhost; Port=5432; User ID=postgres; Password=password; Database=sequence;"
+        "ConnectionString": "Server=localhost; Port=5432; User ID=postgres; Password=password; Database=sequence; Tcp Keepalive=true;"
     },
     "Sqlite": {
         "ConnectionString": "Data Source=sequence.db; Cache=Shared;"
