Add IE11 react-app polyfill

--- a/api/Sequence.Api/wwwroot/package.json
+++ b/api/Sequence.Api/wwwroot/package.json
@@ -6,6 +6,7 @@
     "array.prototype.flat": "^1.2.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
+    "react-app-polyfill": "^0.2.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1"
   },
