--- a/api/Sequence.Api/wwwroot/package.json
+++ b/api/Sequence.Api/wwwroot/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "array.prototype.flat": "^1.2.1",
+    "event-target-shim": "^5.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.2.0",
