--- a/postgres/Sequence.Postgres/Sequence.Postgres.csproj
+++ b/postgres/Sequence.Postgres/Sequence.Postgres.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.Npgsql" Version="2.2.0" />
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
