--- a/api/Sequence.Api/appsettings.Development.json
+++ b/api/Sequence.Api/appsettings.Development.json
@@ -2,11 +2,33 @@
     "Postgres": {
         "ConnectionString": "Server=localhost; Port=5432; User ID=postgres; Password=password; Database=sequence; Tcp Keepalive=true;"
     },
-    "Logging": {
-        "LogLevel": {
+    "Serilog": {
+        "Using": [
+            "Serilog.Sinks.Console"
+        ],
+        "WriteTo": [
+            {
+                "Name": "Console"
+            },
+            {
+                "Name": "RollingFile",
+                "Args": {
+                    "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+                    "pathFormat": "./logs/log-{Date}.json"
+                }
+            }
+        ],
+        "Enrich": [
+            "FromLogContext",
+            "WithMachineName",
+            "WithThreadId"
+        ],
+        "MinimumLevel": {
             "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
         }
     }
 }
