--- a/api/Sequence.Api/appsettings.json
+++ b/api/Sequence.Api/appsettings.json
@@ -2,9 +2,27 @@
     "Postgres": {
         "ConnectionString": "Host=/var/run/postgresql; Port=5432; Database=sequence; Tcp Keepalive=true;"
     },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
+    "Serilog": {
+        "WriteTo": [
+            {
+                "Name": "RollingFile",
+                "Args": {
+                    "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+                    "pathFormat": "./logs/log-{Date}.json"
+                }
+            }
+        ],
+        "Enrich": [
+            "FromLogContext",
+            "WithMachineName",
+            "WithThreadId"
+        ],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
         }
     },
     "AllowedHosts": "*"
