--- a/api/Sequence.Api/wwwroot/package.json
+++ b/api/Sequence.Api/wwwroot/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@aspnet/signalr": "^1.1.2",
     "array.prototype.flat": "^1.2.1",
     "event-target-shim": "^5.0.0",
     "prop-types": "^15.6.2",
