--- a/api/Sequence.Api/wwwroot/package.json
+++ b/api/Sequence.Api/wwwroot/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@aspnet/signalr": "^1.1.2",
     "@types/jest": "^24.0.5",
+    "@types/lodash.shuffle": "^4.2.5",
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "array.prototype.flat": "^1.2.1",
     "event-target-shim": "^5.0.0",
+    "lodash.shuffle": "^4.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
