--- a/src/wwwroot/package.json
+++ b/src/wwwroot/package.json
@@ -36,6 +36,7 @@
   ],
   "devDependencies": {
     "ejs": "^2.6.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "tslint": "^5.14.0"
   }
 }
