--- a/src/wwwroot/package.json
+++ b/src/wwwroot/package.json
@@ -6,17 +6,17 @@
     "@aspnet/signalr": "^1.1.2",
     "@types/jest": "^24.0.5",
     "@types/lodash.shuffle": "^4.2.5",
-    "@types/node": "^11.9.4",
+    "@types/node": "^12.12.5",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
-    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-dom": "^5.1.2",
     "array.prototype.flat": "^1.2.1",
     "event-target-shim": "^5.0.0",
     "lodash.shuffle": "^4.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "typescript": "^3.3.3"
   },
   "scripts": {
@@ -36,7 +36,8 @@
   ],
   "devDependencies": {
     "ejs": "^2.6.1",
-    "react-scripts": "2.1.3",
-    "tslint": "^5.14.0"
+    "react-scripts": "3.2.0",
+    "tslint": "^5.14.0",
+    "tslint-react": "^4.1.0"
   }
 }
